--- a/css/reviews.css
+++ b/css/reviews.css
@@ -1,16 +1,16 @@
 .reviews .overall_rating .num {
     font-size: 30px;
     font-weight: bold;
-    color: #be7c10;
+    color: #f1f1f1;
 }
 .reviews .overall_rating .stars {
     letter-spacing: 3px;
     font-size: 32px;
-    color: #F5A624;
+    color: #ffffff;
     padding: 0 5px 0 10px;
 }
 .reviews .overall_rating .total {
-    color: #777777;
+    color: #ffffff;
     font-size: 14px;
 }
 .reviews .write_review_btn, .reviews .write_review button {
@@ -26,7 +26,7 @@
     border: 0;
 }
 .reviews .write_review_btn:hover, .reviews .write_review button:hover {
-    background-color: #636363;
+    background-color: white;
 }
 .reviews .write_review {
     display: none;
@@ -74,7 +74,7 @@ select {
     margin-top: 10px;
 }
 .reviews .review .date {
-    color: #777777;
+    color: #574f4f;
     font-size: 14px;
 }
 .reviews .review .content {
