--- a/css/style-main.css
+++ b/css/style-main.css
@@ -52,7 +52,7 @@ table{
   border-collapse: collapse;
 }
 th{
-  background-color: #FFCE2F;
+  background-color: #7f0fa1;
 }
 
 td{
@@ -88,10 +88,11 @@ footer{
 }
 .featured-container{
   margin-top: -35px;
-  background-image: url("images/featured-home2.jpg");
+  background-image: url("/images/featured-home2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  color: purple;
 }
 .featured-container-games{
   margin-top: -35px;
