Added Images and Several CSS fixes.

--- a/css/reviews.css
+++ b/css/reviews.css
@@ -64,7 +64,7 @@
 .reviews .review .rating {
     letter-spacing: 2px;
     font-size: 22px;
-    color: #F5A624;
+    color: #ffffff;
 }
 select { 
     width: 300px;
