--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 body {
-    background-color: #401164;
+    background-color: #a877ce;
     margin: 0;
 }
 .navtop {
-    background-color: #440b49;
+    background-color: #712278;
     height: 60px;
     width: 100%;
     border: 0;
