--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -9,7 +9,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 30px;
-  background-color: #333;
+  background-color:rgb(79, 17, 86);
 }
 li {
   display: inline;
