--- a/css/style-admin-nav.css
+++ b/css/style-admin-nav.css
@@ -9,7 +9,7 @@
     list-style-type: none;
     margin: 0;
     padding: 30px;
-    background-color: #000000;
+    background-color:rgb(79, 17, 86);
   }
   
   li {
