--- a/css/style-main.css
+++ b/css/style-main.css
@@ -39,9 +39,9 @@ a{
   color: #fff9f9;
   font-size: 150%;
 }
-.black{
+.link{
   text-decoration: none;
-  color: #000;
+  color: white;
   font-size: 150%;
 }
 table{
@@ -282,12 +282,21 @@ main{
   font-size: 1.2rem;
   width:70%;
   margin:10px auto 16vh;
+  color: white;
 }
 
 .subject-header{
   margin: 50px 0;
   font-family: "Montserrat", sans-serif;
+  color: white;
   font-size:2.6rem;
+}
+.subject-header-2{
+  margin: 50px 0;
+  font-family: "Montserrat", sans-serif;
+  color: black;
+  font-size:2.6rem;
+
 }
 .subject-container{
 padding-top: 20px;
