--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 body {
-    background-color: #a877ce;
+    background-color: #712278;
     margin: 0;
 }
 .navtop {
@@ -43,7 +43,7 @@ body {
     padding: 2px 8px 0 0;
 }
 .navtop div a:hover {
-    color: #ecf0f6;
+    color: #9d922d;
 }
 .content {
     width: 1000px;
