--- a/css/reviews.css
+++ b/css/reviews.css
@@ -15,18 +15,22 @@
 }
 .reviews .write_review_btn, .reviews .write_review button {
     display: inline-block;
-    background-color: #565656;
-    color: #fff;
+    background-color: rgb(95, 12, 82);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     margin: 10px 0 0 0;
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 14px;
+    position: absolute;
+    right: 30px;
     font-weight: 600;
+    width: 150px;
+    height: 60px;
     border: 0;
 }
 .reviews .write_review_btn:hover, .reviews .write_review button:hover {
-    background-color: #cb1acb;
+    background-color: rgb(0, 0, 0);
 }
 .reviews .write_review {
     display: none;
