--- a/css/style-main.css
+++ b/css/style-main.css
@@ -4,6 +4,7 @@
 body{
   margin: 0;
   padding: 0;
+  background-color: rgb(95, 12, 82);
 }
 ul {
   list-style-type: none;
@@ -17,21 +18,40 @@ li {
   margin-right: 50px;
 }
 
-a, h1, th, td, h3{
+a, h1, th, h3{
   font-family: 'Montserrat';
 }
 
+h2{
+  font-family: 'Montserrat';
+  color: wheat;
+  font-style: italic;
+  font-size: x-large;
+  font-weight: 400;
+  
+}
+td{
+  color: wheat;
+  font-style: italic;
+  font-size: x-large;
+  font-weight: 300;
+}
 h1{
   font-size: 50px;
+  font-style: italic;
+  left: 30px;
 }
 .top-intro-header{
+  border-radius: 30%;
   margin-bottom: 100px;
-  padding-top: 250px;
+  padding-top: 150px;
   padding-bottom: 250px;
+  font-style: italic;
   color: #ffffff;
 }
 .main-container-header{
   margin-top: 100px;
+  background-color: #843271;
   margin-bottom:100px;
 }
 a{
@@ -53,11 +73,14 @@ table{
 }
 th{
   background-color: #843271;
+  color: wheat;
+  font-size: large;
   
 }
 
 td{
   width:1%;
+  font-size: large;
 }
 tr{
   transition: all .2s ease-in-out;
@@ -77,7 +100,8 @@ tbody tr:nth-child(n):hover {
 }
 .table-row-link{
   font-size: inherit;
-  color:inherit;
+  color:white;
+  font-style: italic;
 }
 
 footer{
@@ -86,24 +110,36 @@ footer{
 }
 
 .overlay{
-  height: 600px;
+  height: 450px;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .featured-container{
   margin-top: -35px;
   background-image: url("../images/featured-home2.jpg");
+  position: relative;
+  position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   color: purple;
 }
 
+.featured-container-search{
+  margin-top: -35px;
+  background-image: url("../images/featured-home3.jpg");
+  position: relative;
+  position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: purple;
+}
 .featured-container-games{
   margin-top: -35px;
   background-repeat: no-repeat;
   background-size: cover;
-  text-align: center;
+  text-align: start;
   opacity: 0.8;
 }
 main{
@@ -139,8 +175,7 @@ main{
   width: 100px;
   height: 100px;
   margin: 40px auto 0;
-  background-color: #cb1acb;
-  position: relative;
+  background-color: #ffffff;
   overflow: hidden;
   transition: all 0.5s ease;
   box-shadow: 3px 3px 3px 4px rgba(0, 0, 0, .1);
@@ -152,14 +187,16 @@ main{
   width: 3px;
   height: 100%;
   position: relative;
-  background-color: white;
+  background-color: #cb1acb;
   transition: all 0.5s ease;
 }
 .search.open {
+  color: #cb1acb;
   width: 500px;
 }
 .search.open:before {
   height: 60px;
+  background-color: white;
   margin: 20px 0 20px 30px;
   position: absolute;
 }
@@ -168,13 +205,14 @@ main{
   height: 100%;
   box-shadow: none;
   border: none;
-  background: transparent;
+  background: rebeccapurple;;
   color: white;
   padding: 20px 100px 20px 45px;
   font-size: 40px;
   left: auto;
 }
 .search-box:focus {
+  color: #cb1acb;
   outline: none;
 }
 .search-button {
@@ -290,17 +328,18 @@ main{
   font-family: "Montserrat", sans-serif;
   color: white;
   font-size:2.6rem;
+  font-style: italic;
 }
 .subject-header-2{
   margin: 50px 0;
   font-family: "Montserrat", sans-serif;
-  color: black;
+  color: white;
   font-size:2.6rem;
 
 }
 .subject-container{
 padding-top: 20px;
-  background-color: #f5f5f5;
+  background-color: rgb(95, 12, 82);
 }
 .subject-table{
   width:30%;
@@ -327,7 +366,6 @@ padding-top: 20px;
   transition: all 0.3s ease-in-out;
 }
 
-/**/
 #compare-btn input:hover {
   background-color: #cb1acb;
 }
@@ -340,4 +378,15 @@ padding-top: 20px;
 /* Nav bar */
 .nav-menu {
   color:rgb(255, 255, 255);
+}
+
+label{
+  color: white;
+  font-style: italic;
+  font-family: "Montserrat", sans-serif;
+  font-size: large;
+}
+
+twitter-tweet{
+  left: 50%;
 }
